// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Left 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH isAFZs"
    data-js-slick="left"
    onClick={[Function]}
  >
    <img
      alt="left"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Right 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH jGUSLb"
    data-js-slick="right"
    onClick={[Function]}
  >
    <img
      alt="right"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselDot Show Tweet Button 1`] = `
<div
  className="sc-ifAKCX hprZSf"
>
  <div
    className="sc-bxivhb gGDodJ"
  />
</div>
`;

exports[`Storyshots TwApps/atoms/ShowTweetButton Show Tweet Button 1`] = `
<button
  className="sc-jDwBTQ eVOCAN"
  onClick={[Function]}
  type="button"
>
  <div
    className="sc-gPEVay buPkoW"
  />
  <span
    className="sc-fjdhpX djRQxi"
  >
    ツイートを
  </span>
  チラ見
</button>
`;

exports[`Storyshots TwApps/atoms/ToggleMenuButton Toggle Mute Button 1`] = `
<div
  className="sc-chPdSV lohzHM"
>
  <div
    className="sc-jzJRlG igHjlL"
  >
    <button
      className="sc-kAzzGY lKgcl"
      onClick={[Function]}
    >
      <img
        alt="close"
        className="sc-cSHVUG wiHOK menu-toggle-icon"
        src="[object Object]"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/Tweet Tweet 1`] = `
<div
  className="sc-kgoBCf drDsP"
>
  <p
    className="sc-kGXeez gZQnUg"
  >
    ツイートの本文が表示されます
  </p>
  <ul
    className="sc-kpOJdX fhvrAA"
  />
  <div
    className="sc-jKJlTe fjOZbF"
  >
    <div
      className="sc-eNQAEJ eohzHb"
    >
      <div
        className="sc-kEYyzF eFCdiO"
      />
      <p
        className="sc-kkGfuU fkTVNp"
      >
        10
      </p>
    </div>
    <div
      className="sc-eNQAEJ eohzHb"
    >
      <div
        className="sc-hMqMXs jZrvgm"
      />
      <p
        className="sc-iAyFgw XoAaD"
      >
        11
      </p>
    </div>
    <a
      className="sc-hSdWYo bkycbS open-twitter-link"
      href="https://twitter.com/cha_han5656"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="sc-eHgmQL fMQifb twitter-icon"
      />
      <span
        className="sc-cvbbAY dYXmYz pc-twitter-label"
      >
        twitterで見る
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/UnmuteButton Mobile 1`] = `
Array [
  <h2>
    PCサイズでは何も表示されない
  </h2>,
  <button
    className="sc-Rmtcm hQDmRc"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-csuQGl gRNeUw unmute-icon"
    />
    ミュート解除
  </button>,
]
`;

exports[`Storyshots TwApps/atoms/UnmuteButton PC 1`] = `
Array [
  <h2>
    SPサイズでは何も表示されない
  </h2>,
  <button
    className="sc-gipzik cpUytR"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-iRbamj CXoaV mute-icon"
    />
    ミュート
  </button>,
]
`;

exports[`Storyshots TwApps/molecules/FatalMessage Fatal Message 1`] = `
<div
  className="sc-jWBwVP eNMzVg"
>
  <div
    className="sc-brqgnP ffhkeY"
  >
    <h2
      className="sc-cMljjf hTOdsW"
    >
      エラーが発生しました
    </h2>
    <a
      className="sc-jAaTju gQPISw"
      href="http://localhost:6006"
    >
      Topへ戻る
    </a>
  </div>
</div>
`;
